Fixed various code smells, PMD and checkstyle issues